upload file service

--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -8,19 +8,19 @@
         </div>
         <div class="row">
 
+
           <div class="col-sm-4">
             <div class="panel panel-default text-center">
               <div class="panel-heading">
-                  <a routerLink="teachers"><h1>Teacher Profile</h1></a>
+                  <a routerLink="/teachers"><h1>Teacher Profile</h1></a>
               </div>
-
             </div> 
           </div> 
 
           <div class="col-sm-4">
             <div class="panel panel-default text-center">
               <div class="panel-heading">
-                <a routerLink="students"><h1>Student Profile</h1></a>
+                <a routerLink="/students"><h1>Student Profile</h1></a>
               </div>
 
             </div> 
@@ -28,14 +28,14 @@
          <div class="col-sm-4">
             <div class="panel panel-default text-center">
               <div class="panel-heading">
-                  <a routerLink="groups"><h1>Group</h1></a>
+                  <a routerLink="/groups"><h1>Group</h1></a>
               </div>
             </div> 
           </div> 
           <div class="col-sm-4">
               <div class="panel panel-default text-center">
                 <div class="panel-heading">
-                    <a routerLink="subjects"><h1>Subject</h1></a>
+                    <a routerLink="/subjects"><h1>Subject</h1></a>
                 </div>
                 <div class="panel-body">
                   <p><strong>100</strong> Lorem</p>
@@ -50,10 +50,5 @@
             </div> 
         </div>
       </div>
-
-
-
-
-
 </div>
 <app-footer></app-footer>
