--- a/src/app/dashboard/teachers/teachers/teachers.component.html
+++ b/src/app/dashboard/teachers/teachers/teachers.component.html
@@ -1,3 +1,22 @@
-<p>
-  teachers works!
-</p>
+<div class="container">
+<div class="row">
+    <div class="col-xs-12">
+      <h2>Les enseignants</h2>
+      <div class="list-group">
+        <button
+          class="list-group-item"
+          *ngFor="let teacher of teachers; let i = index"
+          (click)="onViewTeacher(i)">
+          <h3 class="list-group-item-heading">
+            {{ teacher.firstname }}
+            <button class="btn btn-default pull-right" (click)="onDeleteTeacher(teacher)">
+              <span class="glyphicon glyphicon-minus"></span>
+            </button>
+          </h3>
+          <p class="list-group-item-text">{{ teacher.lastname }}</p>
+        </button>
+      </div>
+      <button class="btn btn-primary" (click)="onNewTeacher()">Nouveau Enseignant</button>
+    </div>
+  </div>
+</div>
