--- a/src/app/dashboard/teachers/teacher-create/teacher-create.component.html
+++ b/src/app/dashboard/teachers/teacher-create/teacher-create.component.html
@@ -1,44 +1,58 @@
-<div class="row">
-    <div class="col-sm-8 col-sm-offset-2">
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="form-group">
+        <h4>Ajouter une photo</h4>
+        <img src="../../../../assets/images/profile-logo.png" alt="Responsive image" width="90px">
+        <input type="file" name="photo" ng2FileSelect [uploader]="uploader" />
+        <button type="button" class="btn btn-success btn-s" (click)="uploader.uploadAll()" [disabled]="!uploader.getNotUploadedItems().length">
+          Charger l'image
+        </button>
+      </div>
+    </div>
+    <div class="col-sm-8">
       <h2>Enregistrer un nouveau Enseignant</h2>
       <form [formGroup]="teacherForm" (ngSubmit)="onSaveTeacher()">
         <div class="form-group">
           <label for="firstname">First Name</label>
-          <input type="text" id="firstname"
-                 class="form-control" formControlName="firstname">
+          <input type="text" id="firstname" class="form-control" formControlName="firstname">
         </div>
         <div class="form-group">
           <label for="lastname">Last Name</label>
-          <input type="text" id="author"
-                 class="form-control" formControlName="lastname">
+          <input type="text" id="lastname" class="form-control" formControlName="lastname">
         </div>
+
         <div class="form-group">
-          <label for="age">Age</label>
-          <textarea id="age"
-                    class="form-control" formControlName="age">
+          <label for="email">Email</label>
+          <input type="text" id="email" class="form-control" formControlName="email">
+        </div>
+
+        <div class="form-group">
+          <label for="gender">Gender</label>
+          <select type="text" id="gender" class="form-control" formControlName="gender">
+              <option value="MALE">Male</option>
+              <option value="FEMALE">Female</option>
+          </select>
+        </div>          
+
+        <div class="form-group">
+          <label for="birth">Birthdate</label>
+          <input type="date" id="birth" class="form-control" formControlName="birthDate">
+        </div>
+
+        <div class="form-group">
+          <label for="salary">Salary</label>
+          <input type="number" id="salary" class="form-control" formControlName="salary">
+        </div>
+
+        <div class="form-group">
+          <label for="echelon">echelon</label>
+          <textarea id="echelon" class="form-control" formControlName="echelon">
           </textarea>
         </div>
-        <div class="form-group">
-            <h4>Ajouter une photo</h4>
-            <input type="file" (change)="detectFiles($event)"
-                   class="form-control" accept="image/*">
-            <p class="text-success" *ngIf="fileUploaded">Fichier chargé !</p>
-        </div>
-        <button class="btn btn-success" [disabled]="teacherForm.invalid"
-                type="submit">Enregistrer
+        <button class="btn btn-success"  [disabled]="teacherForm.invalid" type="submit">Enregistrer
         </button>
-  
       </form>
     </div>
   </div>
-
-
-
-<div style="text-align:center">
-    <label>
-      <input type="file" (change)="selectFile($event)">
-      </label>
-      <button [disabled]="!selectedFiles"
-  (click)="upload()">Upload</button>
-    </div>
-
+</div>
