--- a/src/app/dashboard/teachers/teacher-detail/teacher-detail.component.html
+++ b/src/app/dashboard/teachers/teacher-detail/teacher-detail.component.html
@@ -5,6 +5,8 @@
       <h1>{{ teacher.id }}</h1>
       <h3>{{ teacher.firstname }}</h3>
       <p>{{ teacher.lastname }}</p>
+      <p>{{ teacher.gender }}</p>
+      <p>{{ teacher.email }}</p>
       <button class="btn btn-default" (click)="onBack()">Retour</button>
     </div>
   </div>
